[package]
name = "cs2-dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
hudhook = { version = "0.7.0", features = ["dx11"] }
libmem = "5.0.0"
minhook = "=0.5.0"
pelite = "0.10.0"
skidscan = "2.0.1"
xorstring = "0.1.0"

[dependencies.windows]
version = "0.57.0"
features= [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common"
]
